--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,8 @@
 name: stylehuman
 channels:
   - pytorch
-  - nvidia
+  - conda-forge
+  #- nvidia
 dependencies:
   - python == 3.8
   - pip
@@ -10,7 +11,7 @@ dependencies:
   - pillow=8.3.1
   - scipy=1.7.1
   - pytorch=1.9.1
-  - cudatoolkit=11.1
+  - cudatoolkit=11.1.1
   - requests=2.26.0
   - tqdm=4.62.2
   - ninja=1.10.2
